Liquid glass support
- Sheets reimplemented to support liquid glass
- Whole navigation changed under the hood

--- a/secant-distrib-Info.plist
+++ b/secant-distrib-Info.plist
@@ -107,6 +107,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
