--- a/zashi-internal-Info.plist
+++ b/zashi-internal-Info.plist
@@ -107,6 +107,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
