Zodl UI fixes and updates
- Michroma font added

--- a/modules/swiftgen.yml
+++ b/modules/swiftgen.yml
@@ -17,6 +17,7 @@ fonts:
     - Fonts/Zboto.otf
     - Fonts/Inter
     - Fonts/RobotoMono
+    - Fonts/Michroma
   outputs:
       templatePath: Templates/fonts/fonts_swift5_swiftui.stencil
       params:
