batch of Zodl updates
- The swap quote UI updated
- The swap metadata changed to reflect ZODL instead of ECC

--- a/secant/zashi-testnet-Info.plist
+++ b/secant/zashi-testnet-Info.plist
@@ -84,6 +84,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIDesignRequiresCompatibility</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
